# maze-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/maze_lab/: cli.py  grid.py
src/maze_lab/generate/: dfs_backtracker.py
src/maze_lab/solve/: bfs.py
tests/: test_generate_dfs_backtracker.py  test_grid.py  test_solve_bfs.py
